// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Controller CRUD CRUD Function Should able to query by property GET /users?offset&limit&name 1`] = `
Array [
  Object {
    "email": "jean.doe@gmail.com",
    "name": "Jean Doe",
  },
]
`;

exports[`Generic Controller CRUD CRUD Function Should set partial validation on query GET /users?offset&limit&name 1`] = `
Array [
  Object {
    "email": "jean.doe@gmail.com",
    "name": "Juan Doe",
  },
]
`;

exports[`Generic Controller CRUD Custom Generic Controller Should able to change generic controller by extending repo base generic controller 1`] = `
Array [
  Array [
    "1. User -> User db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MyGenericController.list              -> GET    /users",
  ],
  Array [
    "2. MyGenericController.save(data)        -> POST   /users",
  ],
  Array [
    "3. MyGenericController.get(id)           -> GET    /users/:id",
  ],
  Array [
    "4. MyGenericController.modify(id, data)  -> PATCH  /users/:id",
  ],
  Array [
    "5. MyGenericController.replace(id, data) -> PUT    /users/:id",
  ],
  Array [
    "6. MyGenericController.delete(id)        -> DELETE /users/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Custom Generic Controller Should able to change generic controller by extending repo base generic controller 2`] = `
Object {
  "email": "john.doe@gmail.com",
  "name": "John Doe",
}
`;

exports[`Generic Controller CRUD Custom Generic Controller Should able to change generic controller using custom controller 1`] = `
Array [
  Array [
    "1. User -> User db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MyGenericController.get(id) -> GET /users/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Custom Generic Controller Should able to change generic controller using custom controller 2`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "email": "john.doe@gmail.com",
  "name": "John Doe",
}
`;

exports[`Generic Controller CRUD Custom Generic Controller Should able to ignore action by extending repo base generic controller 1`] = `
Array [
  Array [
    "1. User -> User db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MyGenericController.save(data)        -> POST   /users",
  ],
  Array [
    "2. MyGenericController.get(id)           -> GET    /users/:id",
  ],
  Array [
    "3. MyGenericController.modify(id, data)  -> PATCH  /users/:id",
  ],
  Array [
    "4. MyGenericController.replace(id, data) -> PUT    /users/:id",
  ],
  Array [
    "5. MyGenericController.delete(id)        -> DELETE /users/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Custom Generic One To Many Controller Should able to change generic controller by extending repo base generic controller 1`] = `
Array [
  Array [
    "1. Animal -> Animal db.animals",
  ],
  Array [
    "2. User   -> User   db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /animals",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /animals",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /animals/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /animals/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /animals/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /animals/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [
    "13. MyGenericController.list             -> GET    /users/:pid/animals",
  ],
  Array [
    "14. MyGenericController.save(pid, data)  -> POST   /users/:pid/animals",
  ],
  Array [
    "15. MyGenericController.get(pid, id)     -> GET    /users/:pid/animals/:id",
  ],
  Array [
    "16. MyGenericController.modify           -> PATCH  /users/:pid/animals/:id",
  ],
  Array [
    "17. MyGenericController.replace          -> PUT    /users/:pid/animals/:id",
  ],
  Array [
    "18. MyGenericController.delete(pid, id)  -> DELETE /users/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Custom Generic One To Many Controller Should able to change generic controller by extending repo base generic controller 2`] = `
Object {
  "name": "Mimi",
}
`;

exports[`Generic Controller CRUD Custom Generic One To Many Controller Should able to change generic controller using custom controller 1`] = `
Array [
  Array [
    "1. Animal -> Animal db.animals",
  ],
  Array [
    "2. User   -> User   db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /animals",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /animals",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /animals/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /animals/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /animals/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /animals/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [
    "13. MyGenericController.get(pid, id)     -> GET    /users/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Custom Generic One To Many Controller Should able to change generic controller using custom controller 2`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "name": "Mimi",
}
`;

exports[`Generic Controller CRUD Custom Generic One To Many Controller Should able to ignore action by extending repo base generic controller 1`] = `
Array [
  Array [
    "1. Animal -> Animal db.animals",
  ],
  Array [
    "2. User   -> User   db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /animals",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /animals",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /animals/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /animals/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /animals/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /animals/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [
    "13. MyGenericController.save(pid, data)  -> POST   /users/:pid/animals",
  ],
  Array [
    "14. MyGenericController.get(pid, id)     -> GET    /users/:pid/animals/:id",
  ],
  Array [
    "15. MyGenericController.modify           -> PATCH  /users/:pid/animals/:id",
  ],
  Array [
    "16. MyGenericController.replace          -> PUT    /users/:pid/animals/:id",
  ],
  Array [
    "17. MyGenericController.delete(pid, id)  -> DELETE /users/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Nested CRUD One to Many Function Should find by name GET /users/:parentId/animals?offset&limit  1`] = `
Array [
  Object {
    "name": "Jojo",
  },
]
`;

exports[`Generic Controller CRUD Nested CRUD One to Many Function Should serve GET /users/:parentId/animals/:id 1`] = `
Object {
  "name": "Mimi",
}
`;

exports[`Generic Controller CRUD Nested CRUD One to Many Function Should serve GET /users/:parentId/animals?offset&limit 1`] = `
Array [
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
  Object {
    "name": "Mimi",
  },
]
`;

exports[`Generic Controller CRUD Nested CRUD One to Many Function Should serve PATCH /users/:parentId/animals/:id 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "name": "Poe",
}
`;

exports[`Generic Controller CRUD Nested CRUD One to Many Function Should serve POST /users/:parentId/animals 1`] = `
Object {
  "__v": 2,
  "_id": "MONGODB UNIQUE ID",
  "animals": Array [
    Object {
      "__v": 0,
      "_id": "MONGODB UNIQUE ID",
      "name": "Mimi",
    },
    Object {
      "__v": 0,
      "_id": "MONGODB UNIQUE ID",
      "name": "Mimi",
    },
  ],
  "email": "john.doe@gmail.com",
  "name": "John Doe",
}
`;

exports[`Generic Controller CRUD Nested CRUD One to Many Function Should serve PUT /users/:parentId/animals/:id 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "name": "Poe",
}
`;

exports[`Generic Controller CRUD Nested CRUD One to Many Function Should set partial validation on PATCH /users/:parentId/animals/:id 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "age": 4,
  "name": "Poe",
}
`;

exports[`Generic Controller CRUD Nested CRUD One to Many Function Should set partial validation on query on GET /users/:parentId/animals?offset&limit 1`] = `
Array [
  Object {
    "age": 5,
    "name": "Jojo",
  },
]
`;

exports[`Generic Controller CRUD Route Generator Should able to change rootPath 1`] = `
Array [
  Array [
    "1. User -> User db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /api/v1/users",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /api/v1/users",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /api/v1/users/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /api/v1/users/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /api/v1/users/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /api/v1/users/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Route Generator Should able to change rootPath with extra slash 1`] = `
Array [
  Array [
    "1. User -> User db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /api/v1/users",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /api/v1/users",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /api/v1/users/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /api/v1/users/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /api/v1/users/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /api/v1/users/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Route Generator Should able to override route 1`] = `
Array [
  Array [
    "1. User -> User db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    "3. UsersController.get(id)              -> GET    /users/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Route Generator Should generate one to many routes 1`] = `
Array [
  Array [
    "1. Animal -> Animal db.animals",
  ],
  Array [
    "2. User   -> User   db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /animals",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /animals",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /animals/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /animals/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /animals/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /animals/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [
    "13. MongooseOneToMan...eneric.list       -> GET    /users/:pid/animals",
  ],
  Array [
    "14. MongooseOneToMan...eneric.save       -> POST   /users/:pid/animals",
  ],
  Array [
    "15. MongooseOneToMan...eneric.get        -> GET    /users/:pid/animals/:id",
  ],
  Array [
    "16. MongooseOneToMan...eneric.modify     -> PATCH  /users/:pid/animals/:id",
  ],
  Array [
    "17. MongooseOneToMan...eneric.replace    -> PUT    /users/:pid/animals/:id",
  ],
  Array [
    "18. MongooseOneToMan...eneric.delete     -> DELETE /users/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Route Generator Should generate one to many routes without callback 1`] = `
Array [
  Array [
    "1. Animal -> Animal db.animals",
  ],
  Array [
    "2. User   -> User   db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /animals",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /animals",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /animals/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /animals/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /animals/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /animals/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [
    "13. MongooseOneToMan...eneric.list       -> GET    /users/:pid/animals",
  ],
  Array [
    "14. MongooseOneToMan...eneric.save       -> POST   /users/:pid/animals",
  ],
  Array [
    "15. MongooseOneToMan...eneric.get        -> GET    /users/:pid/animals/:id",
  ],
  Array [
    "16. MongooseOneToMan...eneric.modify     -> PATCH  /users/:pid/animals/:id",
  ],
  Array [
    "17. MongooseOneToMan...eneric.replace    -> PUT    /users/:pid/animals/:id",
  ],
  Array [
    "18. MongooseOneToMan...eneric.delete     -> DELETE /users/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Route Generator Should generate one to many with parameter properties 1`] = `
Array [
  Array [
    "1. Animal -> Animal db.animals",
  ],
  Array [
    "2. User   -> User   db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /animals",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /animals",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /animals/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /animals/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /animals/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /animals/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [
    "13. MongooseOneToMan...eneric.list       -> GET    /users/:pid/animals",
  ],
  Array [
    "14. MongooseOneToMan...eneric.save       -> POST   /users/:pid/animals",
  ],
  Array [
    "15. MongooseOneToMan...eneric.get        -> GET    /users/:pid/animals/:id",
  ],
  Array [
    "16. MongooseOneToMan...eneric.modify     -> PATCH  /users/:pid/animals/:id",
  ],
  Array [
    "17. MongooseOneToMan...eneric.replace    -> PUT    /users/:pid/animals/:id",
  ],
  Array [
    "18. MongooseOneToMan...eneric.delete     -> DELETE /users/:pid/animals/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Route Generator Should generate routes from inheritance 1`] = `
Array [
  Array [
    "1. User -> User db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Route Generator Should generate routes from multiple entities 1`] = `
Array [
  Array [
    "1. User       -> User       db.users",
  ],
  Array [
    "2. SecondUser -> SecondUser db.secondusers",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    " 1. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    " 2. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    " 3. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    " 4. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    " 5. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    " 6. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [
    " 7. MongooseControllerGeneric.list       -> GET    /secondusers",
  ],
  Array [
    " 8. MongooseControllerGeneric.save(data) -> POST   /secondusers",
  ],
  Array [
    " 9. MongooseControllerGeneric.get(id)    -> GET    /secondusers/:id",
  ],
  Array [
    "10. MongooseControllerGeneric.modify     -> PATCH  /secondusers/:id",
  ],
  Array [
    "11. MongooseControllerGeneric.replace    -> PUT    /secondusers/:id",
  ],
  Array [
    "12. MongooseControllerGeneric.delete(id) -> DELETE /secondusers/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller CRUD Route Generator Should generate routes properly 1`] = `
Array [
  Array [
    "1. User -> User db.users",
  ],
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. MongooseControllerGeneric.list       -> GET    /users",
  ],
  Array [
    "2. MongooseControllerGeneric.save(data) -> POST   /users",
  ],
  Array [
    "3. MongooseControllerGeneric.get(id)    -> GET    /users/:id",
  ],
  Array [
    "4. MongooseControllerGeneric.modify     -> PATCH  /users/:id",
  ],
  Array [
    "5. MongooseControllerGeneric.replace    -> PUT    /users/:id",
  ],
  Array [
    "6. MongooseControllerGeneric.delete(id) -> DELETE /users/:id",
  ],
  Array [],
]
`;

exports[`Generic Controller Open API Should mark ref populate property as readonly 1`] = `
Object {
  "properties": Object {
    "animals": Object {
      "items": Object {
        "$ref": "#/components/schemas/Animal",
        "type": "object",
      },
      "readOnly": true,
      "type": "array",
    },
    "email": Object {
      "type": "string",
    },
    "name": Object {
      "type": "string",
    },
  },
  "type": "object",
}
`;
